# complex-cpp-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  code.patch  main.cpp  run_verification.py  setup_env.sh  setup_repo.sh  string_processor.cpp  string_processor.h  test.patch
